--- a/styles.css
+++ b/styles.css
@@ -42,13 +42,13 @@ html, body {
     flex-direction: row;
     justify-content:space-around;
     font-size: 2vw;
-    margin: 30px auto 20px;
+    margin: 40px auto 20px;
     padding: 0rem;
     width: 80vw;
 }
 
 .flex-item-1 {
-    border: 3px solid black;
+    border: 4px solid black;
     border-radius: 1vw;
     padding: 3px;
     background-color: black;
@@ -60,6 +60,24 @@ h1 {
   font-size: 7vw;
   text-align: center;
   text-shadow: 0.6vw 0.6vw #23d5ab;
+  margin-bottom: 2.5vw;
+}
+
+h2 {
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 4vw;
+    text-align: center;
+    text-shadow: 0.2vw 0.3vw 2vw #d523b4;
+  }
+
+#intro {
+    width: 80%;
+    margin: 40px auto 60px;
+    font-size: 1.7vw;
+    background-color: whitesmoke;
+    padding: 0.5vw;
+    border-radius: 1vw;
+    box-shadow: 10px 0px 50px 35px #c09abe;
 }
 
 #scorpy {grid-area: scorpy;}
@@ -82,7 +100,7 @@ h1 {
     grid-auto-rows: 20vw;
     justify-content: center;
     gap: 5px;
-    margin: 50px auto 60px;
+    margin: 25px auto 30px;
     width: 85%;
 }
 
@@ -102,7 +120,7 @@ h1 {
     display: table;
 }
 
-article > h2 {
+article > h3 {
     margin: 0;
     font-size: 2.5vw;
 }
@@ -132,6 +150,22 @@ article#rygel > img {
 
 article#zhaan > img {
     object-position: 60% 0;
+}
+
+article#chianna > img {
+    object-position: 70% 0;
+}
+
+article#crais > img {
+    object-position: 10% 0;
+}
+
+article#aeryn > img {
+    object-position: 70% 0;
+}
+
+article#dargo > img {
+    object-position: 50% 0;
 }
 
 #home{
@@ -165,7 +199,7 @@ article#zhaan > img {
         margin: 30px;
     }
 
-    article > h2 {
+    article > h3 {
        font-size: 4vw;
     }
 
@@ -173,8 +207,18 @@ article#zhaan > img {
         width: 50%;
         font-size: 3.2vw;
     }
+
+    #intro {
+        font-size: 3.2vw;
+        margin-top: 10px;
+    }
+
     img {
         max-width: 50%;
+    }
+
+    .flex-container-1 {
+        margin: 20px auto 20px;
     }
 }
   
@@ -193,11 +237,12 @@ article#zhaan > img {
 @media (min-width: 1500px) {
     #grid {
         grid-template-columns: 600px 600px;
+        grid-auto-rows: auto;
         padding: 0;
     }
     h1 {
-        font-size: 90px;
-        margin: 90px;
+        font-size: 110px;
+        margin: 90px auto 50px;
     }
     .flex-item-1{
         font-size: 2rem;
@@ -208,15 +253,23 @@ article#zhaan > img {
         justify-content: center;
     }
 
-    article > p{
+    article > p, #intro {
         font-size: 25px;
       }
 
-    article > h2 {
+    article > h3 {
         font-size: 40px;
+    }
+
+    #intro {
+        width: 1200px;
+        margin: 80px auto 100px;
+    }
+
+    h2 {
+        font-size: 70px;
     }
     
 }
-
 
 
