--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=K2D&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,400;1,100&display=swap');
 
-:root{
-    --hidden-text: 2vw;
-}
 
 html, body { 
     margin: 0;
@@ -44,27 +42,44 @@ html, body {
     display: flex;
     text-align: center;
     flex-direction: row;
-    justify-content:space-around;
+    justify-content:center;
     font-size: 2vw;
-    margin: 40px auto 20px;
-    padding: 0rem;
-    width: 80vw;
+    margin: 0 auto;
+    padding: 0;
+    padding-top: 2vw;
+    border-bottom: 8px solid palevioletred;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
 }
 
 .flex-item-1 {
     border: 4px solid black;
-    border-radius: 1vw;
-    padding: 3px;
-    background-color: rgb(214, 32, 246);
+    border-bottom: none;
+    border-radius: 1.2vw 1.2vw 0 0;
+    padding: 5px 1vw;
+    background-color: rgb(251, 33, 255);
     color: whitesmoke;
+    margin: 0 0.4vw;
 }
 
 h1 {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
   font-family: 'Luckiest Guy', cursive;
   font-size: 7vw;
   text-align: center;
   text-shadow: 0.4vw 0.4vw #23d5ab;
-  margin-bottom: 2.5vw;
+}
+
+#subtitle {
+    display: block;
+    text-align: center;
+    font-family: 'K2D', sans-serif;
+    font-style: italic;
+    margin: 0 auto;
+    font-size: 4vw;
 }
 
 h2 {
@@ -103,14 +118,14 @@ h2 {
     grid-template-columns: 40vw 40vw;
     grid-auto-rows: 20vw;
     justify-content: center;
-    gap: 5px;
+    gap: 10px;
     margin: 25px auto 30px;
     width: 85%;
 }
 
 #grid > article {
     border: 2px solid black;
-    border-radius: 12px;
+    border-radius: 1vw;
     padding: 4px;
     background-color: rgb(0, 0, 0);
     color: whitesmoke;
@@ -131,7 +146,7 @@ article > h3 {
 
 article > p{
   margin-top: 10px;
-  width: 58%;
+  width: 59%;
   font-size: 1.7vw;
 }
 
@@ -210,12 +225,14 @@ article#dargo > img {
   button {
     width: 6em;
     background-color: #ee7752;
-    line-height: 0.8;
+    line-height: 1.4ch;
+    /*height: 100%; << allows flex-items to resize independently*/
     transition: background-color 0.8s;
   }
 
   button:hover {
     background-color: #000;
+    line-height: 80%;
   }
 
   #back-to-home:hover, #home:hover {
@@ -232,36 +249,34 @@ article#dargo > img {
   transition: none;
 }
 
-
   button:hover span {
     display: none
   }
-
   
   #button1:hover:before {
     content: "crazy";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button2:hover:before {
     content: "kid";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button3:hover:before {
     content: "hell";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button4:hover:before {
     content: "metre";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button5:hover:before {
     content: "second";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button6:hover:before {
     content: "Parental guidance moment!";
@@ -274,7 +289,7 @@ article#dargo > img {
   #button8:hover:before {
     content: "An edible slug; a Hynerian delicacy";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button9:hover:before {
     content: "A military alien race with tall statures and face tentacles";
@@ -293,12 +308,12 @@ article#dargo > img {
   #button12:hover:before {
     content: "crispy cooked meat";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button13:hover:before {
     content: "a unit of speed";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button14:hover:before {
     content: "used to manufacture pulse weapon ammunition";
@@ -308,12 +323,12 @@ article#dargo > img {
   #button15:hover:before {
     content: "fantastic";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button16:hover:before {
     content: "rubbish";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button17:hover:before {
     content: "a Luxan physiological trait, typified by bouts of uncontrollable mania";
@@ -323,27 +338,27 @@ article#dargo > img {
   #button18:hover:before {
     content: "an animal appendage";
     color: #059626;
-    font-size:2vmin;
+    font-size:3vmin;
   }
   #button19:hover:before {
     content: "girl";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button20:hover:before {
     content: "antique Luxan bladed weapon";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button21:hover:before {
     content: "a unit of currency";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button22:hover:before {
     content: "a deadly, asteroid-sized space-dog!";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button23:hover:before {
     content: "Censored!";
@@ -352,7 +367,7 @@ article#dargo > img {
   #button24:hover:before {
     content: "Hynerian exclamation";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button25:hover:before {
     content: "a dental hygiene worm (yes, an actual alien worm)";
@@ -367,12 +382,12 @@ article#dargo > img {
   #button27:hover:before {
     content: "1 hour";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
   #button28:hover:before {
     content: "an autonomous repair bot";
     color: #059626;
-    font-size: 2vmin;
+    font-size: 3vmin;
   }
 
 @media (max-width: 600px) {
@@ -390,9 +405,10 @@ article#dargo > img {
         'dargo';
         grid-template-columns: 1fr;
         grid-auto-rows: 45vw;
+        gap: 5px;
     }
     h1 {
-        margin: 30px;
+        margin: 30px auto 0;
     }
 
     article > h3 {
@@ -406,7 +422,8 @@ article#dargo > img {
 
     #intro {
         font-size: 3.2vw;
-        margin-top: 10px;
+        margin-top: 30px;
+        margin-bottom: 35px;
     }
 
     img {
@@ -414,17 +431,22 @@ article#dargo > img {
     }
 
     .flex-container-1 {
-        margin: 20px auto 20px;
+        margin: 0 auto 20px;
+        padding-top: 10px;
+        border-bottom: 3px solid palevioletred;
         gap: 1vw;
+    }
+
+    .flex-item-1 {
+        font-size: 2.5vw;
+        padding: 0 1vw;
+    }
+
+    #home {
+        font-size: 3vw;
     }
 }
   
-@media (max-width: 800px) {
-  .flex-item-1 {
-    border: 3px solid black;
-  }
-}
-
 @media (min-width: 1300px) {
     #grid {
         grid-template-rows: 300px 300px;
@@ -439,15 +461,18 @@ article#dargo > img {
     }
     h1 {
         font-size: 110px;
-        margin: 90px auto 50px;
+        margin: 90px auto 0;
+    }
+
+    h2, #subtitle {
+        font-size: 70px;
     }
     .flex-item-1{
-        font-size: 2rem;
-        border-radius: 10px;
+        font-size: 27px;
         margin: 0 10px 0 0;
     }
     .flex-container-1 {
-        justify-content: center;
+        padding-top: 30px;
     }
 
     article > p, #intro, #page2-intro {
